making it prettier

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<meta name="description" content="Project + Portfolio 3 Demo: WDD | University">
 
 		<!-- Cascading StyleSheets -->
-		<!-- <link rel="stylesheet" href="css/reset.css">-->
 		<link rel="stylesheet" href="css/style.css"> 
 
 		<!--[if lt IE 9]>
@@ -21,7 +20,7 @@
 		<div id="app"></div>
 
 		<!-- Javascript -->
-		<script src="js/index.js"  crossorigin="anonymous"></script>
+		<script src="js/index.js"></script>
 
 	</body>
 </html>
