--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="app"></div>
 
 		<!-- Javascript -->
-		<script src="js/index.js"></script>
+		<script src="js/index.js"  crossorigin="anonymous"></script>
 
 	</body>
 </html>
